--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,1 +1,1 @@
-pyuv @ git+https://github.com/saghul/pyuv@master#egg=pyuv
+pyuv @ git+https://github.com/saghul/pyuv@2a3d42d44c6315ebd73899a35118380d2d5979b5#egg=pyuv
